--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ fetch('https://api.ipsw.me/v4/ipsw/13.3.1')
 <div class="info">${identifier}</div>
 <div class="info">SHA1: ${sha1sum}</div>
 <div class="info">MD5: ${md5sum}</div>
-<div class="info">${releasedate}</div>
+<div class="info">Date: ${releasedate}</div>
 
 </div>
 </div>
@@ -85,7 +85,7 @@ fetch('https://api.ipsw.me/v4/ipsw/13.3')
 <div class="info">${identifier}</div>
 <div class="info">SHA1: ${sha1sum}</div>
 <div class="info">MD5: ${md5sum}</div>
-<div class="info">${releasedate}</div>
+<div class="info">Date: ${releasedate}</div>
 
 </div>
 </div>
