--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ fetch('https://api.ipsw.me/v4/ipsw/13.3.1')
 <div class="imgg" style="">
 </div>
 <div class="flex-grow mr-2">
-<p class="text-white">iOS ${version} (${buildid})</p>
+<p class="text-white">iOS ${version} (${buildid}) ${identifier}</p>
 <div class="info">${identifier}</div>
 <div class="info">SHA1: ${sha1sum}</div>
 <div class="info">MD5: ${md5sum}</div>
