--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 //Using javascript ES5 function 
 
-fetch('https://api.ipsw.me/v4/ipsw/13.3.1')
+fetch('https://xipax2017.github.io/json/json.json')
     .then(function (res) {
         return res.json();
     })
@@ -63,7 +63,7 @@ fetch('https://api.ipsw.me/v4/ipsw/13.3.1')
   </script>
     	<script>
 //getData function
-
+/*
 //Using javascript ES5 function 
 
 fetch('https://api.ipsw.me/v4/ipsw/13.3')
