--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 	       <script>
       eva.replace()
     </script>
-	<script>
+
+    	<script>
 //getData function
 
 //Using javascript ES5 function 
@@ -37,7 +38,7 @@ fetch('https://xipax2017.github.io/json/json.json')
     .then(function (data) {
         let result = ``;
         data.forEach((apps) => {
-            const {  version, buildid, signed, sha1sum, md5sum, f, releasedate } = apps
+            const {  version, buildid, signed, sha1sum, md5sum, filename, releasedate } = apps
             result +=
 `
 <div class="${signed}" >
@@ -46,46 +47,10 @@ fetch('https://xipax2017.github.io/json/json.json')
 </div>
 <div class="flex-grow mr-2">
 <p class="text-white">iOS ${version} (${buildid})</p>
-<div class="info">${f}</div>
+<div class="info">${filename}</div>
 <div class="info">SHA1: ${sha1sum}</div>
 <div class="info">MD5: ${md5sum}</div>
-<div class="info">Date: ${releasedate}</div>
-
-</div>
-</div>
-
-</div>`;
-
-
-            document.getElementById('signed true').innerHTML = result;
-        });
-       })
-  </script>
-    	<script>
-//getData function
-/*
-//Using javascript ES5 function 
-
-fetch('https://api.ipsw.me/v4/ipsw/13.3')
-    .then(function (res) {
-        return res.json();
-    })
-    .then(function (data) {
-        let result = ``;
-        data.forEach((apps) => {
-            const {  version, buildid, signed, sha1sum, md5sum, identifier, releasedate } = apps
-            result +=
-`
-<div class="${signed}" >
-<div class="items-center justify-start content-center align-center flex flex-grow">
-<div class="imgg" style="">
-</div>
-<div class="flex-grow mr-2">
-<p class="text-white">iOS ${version} (${buildid})</p>
-<div class="info">${identifier}</div>
-<div class="info">SHA1: ${sha1sum}</div>
-<div class="info">MD5: ${md5sum}</div>
-<div class="info">Date: ${releasedate}</div>
+<div class="info">${releasedate}</div>
 
 </div>
 </div>
