--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 //Using javascript ES5 function 
 
-fetch('https://xipax2017.github.io/json/json.json')
+fetch('https://api.ipsw.me/v4/ipsw/13.3.1')
     .then(function (res) {
         return res.json();
     })
