--- a/index.html
+++ b/index.html
@@ -5,15 +5,20 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+      <script src="https://unpkg.com/eva-icons"></script>
+
 
 <meta http-equiv="Content-Security-Policy" content="default-src * 'self' 'unsafe-inline' 'unsafe-eval' data: gap:">
 <title>Firmware API</title>
+<link rel="stylesheet" href="css/dark.css">
 <link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="https://kit-pro.fontawesome.com/releases/v5.13.0/css/pro.min.css">
 
 <body>
 	<div id="list">
+        <button onclick="myFunction()">Toggle dark mode</button>
 	<div class="home">
-        
+
         <p>Firmware API</p>
         </div>
 
@@ -22,14 +27,15 @@
 
 
 	</div>
-
-
-    	<script>
+    <script>
+      eva.replace()
+    </script>
+	<script>
 //getData function
 
 //Using javascript ES5 function 
 
-fetch('https://api.ipsw.me/v4/ipsw/13.3.1')
+fetch('json.json')
     .then(function (res) {
         return res.json();
     })
@@ -41,7 +47,42 @@ fetch('https://api.ipsw.me/v4/ipsw/13.3.1')
 `
 <div class="${signed}" >
 <div class="items-center justify-start content-center align-center flex flex-grow">
-<div class="imgg" style="">
+<div class="imgg"></div>
+<div class="flex-grow mr-2">
+<p class="text-white">iOS ${version} (${buildid})</p>
+<div class="info"></div>
+<div class="info">SHA1: ${sha1sum}</div>
+<div class="info">MD5: ${md5sum}</div>
+<div class="info">${releasedate}</div>
+
+</div>
+</div>
+
+</div>`;
+
+
+            document.getElementById('signed true').innerHTML = result;
+        });
+       })
+  </script>
+    	<script>
+//getData function
+
+//Using javascript ES5 function 
+
+fetch('https://api.ipsw.me/v4/ipsw/')
+    .then(function (res) {
+        return res.json();
+    })
+    .then(function (data) {
+        let result = ``;
+        data.forEach((apps) => {
+            const {  version, buildid, signed, sha1sum, md5sum, identifier, releasedate } = apps
+            result +=
+`
+<div class="${signed}" >
+<div class="items-center justify-start content-center align-center flex flex-grow">
+<div class="imgg">        <i data-eva="github" data-eva-fill="#36f" data-eva-height="48" data-eva-width="48"></i>
 </div>
 <div class="flex-grow mr-2">
 <p class="text-white">iOS ${version} (${buildid})</p>
@@ -62,7 +103,12 @@ fetch('https://api.ipsw.me/v4/ipsw/13.3.1')
   </script>
 	
 	
-	
+	<script>
+function myFunction() {
+   var element = document.body;
+   element.classList.toggle("dark-mode");
+}
+</script>
 	
 
 </body>
