--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 //Using javascript ES5 function 
 
-fetch('http://julioverne.github.io/all.packages')
+fetch('json.json')
     .then(function (res) {
         return res.json();
     })
