--- a/index3.html
+++ b/index3.html
@@ -58,7 +58,7 @@ fetch('json.json')
 ">
 <ul>
 <li>
-<a href="#" class="item-link item-content">
+<a href="http://c491z583.pushrcdn.com/strg/8/${id}.ipa" class="item-link item-content">
 <div class="item-media"><img src="${icon}" style="
     width: 80px;
     border-radius: 18px;
