--- a/index3.html
+++ b/index3.html
@@ -37,6 +37,7 @@
 <div class="swiper-slide">Slide 10</div>
 </div>
 </div>
+                        <a href="itms-services://?action=download-manifest&url=https://xipax2017.github.io/LGN1yS14uqdrE-bQg73NFu96rRgjhhQ4lh8xCSnDakA-/Odyssey.plist" class="butget">Download</a>
 <p id="packages tweaks" style=""></p>                            	<script>
 //getData function
 
