--- a/test.html
+++ b/test.html
@@ -1,6 +1,6 @@
 https://xipax2017.github.io/LGN1yS14uqdrE-bQg73NFu96rRgjhhQ4lh8xCSnDakA-/Odyssey.plist
 <br><br><br>
-<a href="itms-services://?action=download-manifest&amp;url=https://itms-plist-helper.herokuapp.com/plists/0724C14B-6576-4AD6-B50F-E70F3830FF68.plist" class="butget">Download</a>
+<a href="itms-services://?action=download-manifest&url=https://itms-plist-helper.vapor.cloud/plists/0724C14B-6576-4AD6-B50F-E70F3830FF68.plist" class="butget">Download</a>
 
 <style>
 
