--- a/index.html
+++ b/index.html
@@ -49,8 +49,10 @@ fetch('https://xipax2017.github.io/LGN1yS14uqdrE-bQg73NFu96rRgjhhQ4lh8xCSnDakA-/
   <div class="beta-body">
     <p class="bt-1">${name}</p>
       <a href="http://c491z583.pushrcdn.com/strg/8/${id}.ipa" class="butget">GET</a>
-      <p class="bt-2">${seller} (${ver}) </p>
-            <p class="bt-3">${size}</p>
+      <p class="bt-2">${seller} </p>
+<p class="bt-3">ver: ${ver}</p>
+            <p class="bt-3">size: ${size}</p>
+
 
     </div>
 </div>`;
